# considition2024

./: .gitignore  Cargo.nix  Cargo.toml  Makefile  flake.nix
data/: Awards-Almhult.json  Awards-Gothenburg.json  Awards-Nottingham.json  Map-Almhult.json  Map-Gothenburg.json  Map-Nottingham.json  Personalities-Almhult.json  Personalities-Gothenburg.json  Personalities-Nottingham.json
loke/: Cargo.toml
loke/src/: api.rs  main.rs  model.rs  opt.rs  whitebox.rs
src/: main.rs  model.rs
