[package]
name = "considition2024"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
itertools = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
