[package]
name = "considition2024"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = { version = "0.10", features = ["rayon"] }
argmin-math = "0.4"
argmin-observer-slog = "0.1"
dashmap = "6"
futures = "0.3"
itertools = "0.13"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
